clean code smell